--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,21 @@
 {
   "version": "2.0.0",
   "tasks": [
+    {
+      "type": "shell",
+      "label": "run",
+      "command": ["${workspaceFolder}/app"],
+      "dependsOn": [
+        "buildApp"
+    ],
+    "group": {
+      "kind": "build",
+      "isDefault": true
+     },
+    },
    {
     "type": "cppbuild",
-    "label": "C/C++: clang++ build active file",
+    "label": "buildApp",
     "command": "/usr/bin/clang++",
     "args": [
      "-std=c++17",
@@ -33,11 +45,8 @@
      "cwd": "${fileDirname}"
     },
     "problemMatcher": ["$gcc"],
-    "group": {
-     "kind": "build",
-     "isDefault": true
-    },
-    "detail": "compiler: /usr/bin/clang++"
-   }
+    "detail": "compiler: /usr/bin/clang++",
+   },
+
   ]
  }
