refactor: reorganize all the files in folders

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,11 +18,12 @@
     "label": "buildApp",
     "command": "g++",
     "args": [
-    "*.cpp",
-     "-std=c++17",
-     "-fdiagnostics-color=always",
-     "-Wall",
-     "-g",
+      "-std=c++17",
+      "-fdiagnostics-color=always",
+      "-Wall",
+      "-g",
+      "${fileDirname}/*.cpp",
+      "${fileDirname}/**/*.cpp",
      "-I${workspaceFolder}/dependencies/include",
      "-L${workspaceFolder}/dependencies/library",
      "${workspaceFolder}/dependencies/library/libglfw.3.3.dylib",
